--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/icons-material": "5.11.16",
     "@mui/material": "5.12.3",
     "@mui/x-tree-view": "^7.1.0",
+    "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
@@ -27,10 +28,12 @@
     "react-chartjs-2": "5.2.0",
     "react-dom": "18.2.0",
     "react-github-btn": "1.4.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
     "react-table": "7.8.0",
     "react-toastify": "^10.0.5",
+    "redux": "^5.0.1",
     "stylis": "4.1.4",
     "stylis-plugin-rtl": "2.1.1",
     "yup": "1.1.1"
