--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "material-dashboard-2-react",
   "version": "2.2.0",
   "private": true,
+  "homepage": "https://progrowth.coach/",
   "author": "Creative Tim",
   "license": "See license in https://www.creative-tim.com/license",
   "description": "React version of Material Dashboard 2 by Creative Tim",
@@ -23,6 +24,7 @@
     "axios": "^1.6.8",
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
+    "notistack": "^3.0.1",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-chartjs-2": "5.2.0",
