--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@emotion/styled": "11.10.8",
     "@mui/icons-material": "5.11.16",
     "@mui/material": "5.12.3",
+    "@mui/styles": "^5.15.15",
     "@mui/x-tree-view": "^7.1.0",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
@@ -30,6 +31,7 @@
     "react-chartjs-2": "5.2.0",
     "react-dom": "18.2.0",
     "react-github-btn": "1.4.0",
+    "react-player": "^2.16.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
