--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/cache": "11.10.8",
     "@emotion/react": "11.10.8",
     "@emotion/styled": "11.10.8",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "5.11.16",
     "@mui/material": "5.12.3",
     "@mui/styles": "^5.15.15",
