--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "yup": "1.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=80 && react-scripts start",
     "build": "react-scripts --max_old_space_size=8000 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
