--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@mui/styles": "^5.15.15",
     "@mui/x-tree-view": "^7.1.0",
     "@reduxjs/toolkit": "^2.2.3",
-    "axios": "^1.6.8",
+    "axios": "^1.7.2",
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
+    "moment": "^2.30.1",
     "notistack": "^3.0.1",
     "prop-types": "15.8.1",
     "react": "18.2.0",
+    "react-calendar": "^5.0.0",
     "react-chartjs-2": "5.2.0",
     "react-dom": "18.2.0",
     "react-github-btn": "1.4.0",
