--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@mui/x-tree-view": "^7.1.0",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
+    "jodit-react": "^4.1.2",
     "moment": "^2.30.1",
     "notistack": "^3.0.1",
     "prop-types": "15.8.1",
@@ -34,6 +36,7 @@
     "react-chartjs-2": "5.2.0",
     "react-dom": "18.2.0",
     "react-github-btn": "1.4.0",
+    "react-icons": "^5.3.0",
     "react-player": "^2.16.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.11.0",
